# OpenMP_course

./: .gitignore
problem1/: CMakeLists.txt  README.md  problem1.cpp  problem1_2.cpp
problem2/: CMakeLists.txt  README.md  problem2.cpp
problem3/: CMakeLists.txt  README.md  problem3.cpp
problem4/: CMakeLists.txt  README.md  problem4.cpp
problem5/: CMakeLists.txt  README.md  problem5.cpp
problem6/: CMakeLists.txt  README.md  problem6.cpp
problem7/: CMakeLists.txt  README.md  problem7.cpp
